Fix JavaFX installers