@@ -14,7 +14,6 @@ plugins {
     id("me.champeau.astro4j.base")
     id("application")
     id("org.graalvm.buildtools.native")
-    id("org.beryx.jlink")
     id("me.champeau.astro4j.modularity")
 }
 
@@ -60,43 +59,5 @@ graalvmNative {
             }
         }
         jvmArgs("--enable-preview")
-    }
-}
-
-jlink {
-    options.addAll(listOf("--strip-debug", "--compress", "2", "--no-header-files", "--no-man-pages"))
-    launcher {
-        jvmArgs.add("--enable-preview")
-    }
-    jpackage {
-        vendor = "Cédric Champeau"
-        if (os.startsWith("windows")) {
-            installerType = "msi"
-            installerOptions.addAll(listOf("--win-per-user-install", "--win-dir-chooser", "--win-menu"))
-            if (file("src/installer/icon.ico").exists()) {
-                icon = "src/installer/icon.ico"
-            }
-        } else if (os.contains("mac")) {
-            installerType = "pkg"
-            if (file("src/installer/icon.icns").exists()) {
-                icon = "src/installer/icon.icns"
-            }
-        } else {
-            installerType = "deb"
-            installerOptions.addAll(listOf("--linux-shortcut"))
-            if (file("src/installer/icon.png").exists()) {
-                icon = "src/installer/icon.png"
-            }
-        }
-    }
-}
-
-tasks.register<Copy>("jpackageInstallers") {
-    setDestinationDir(layout.buildDirectory.dir("installers").get().asFile)
-    from(tasks.jpackage) {
-        include("*.zip")
-        include("*.msi")
-        include("*.deb")
-        include("*.pkg")
     }
 }
